# simpleminded-shell

./: .gitignore  CLAUDE.md  README.md  install.sh
.github/workflows/: publish.yml  test.yml
docs/: AI-SETUP.md  ALIASES.md  INSTALLATION.md  MCP-SERVER.md  SUMMARY.md  TOOLS.md
mcp-server/: LICENSE  MANIFEST.in  PUBLISHING.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
mcp-server/src/: __init__.py  alias_detector.py  command_translator.py  config_parser.py  example_provider.py  server.py  tool_checker.py
mcp-server/tests/: __init__.py  test_alias_detector.py  test_translator.py
